trabalhando na section de inicio

--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
             </div>
         </nav>
 
+        <section class="inicio container-fluid">
+            <h1 class="text-center">Seja bem-vindx!</h1>
+            
+
+            <div class="container foto-com-texto">
+                <div class="row">
+                    <div class="col-lg-6 foto">
+                        <img src="img/essa.png" width="300px" class="rounded-circle">
+                    </div>
+                    <div class="col-lg-6">
+                        <p class="minha-descricao">Meu nome é Eliene Montenegro, faço Ciências da Computação na UFBA (Universidade Federal da Bahia), sou Escritora (livro Depois do Fim do Mundo
+                            na Amazon), e pretendo me tornar Game e Web developer. Criei este portfolio para mostrar meus projetos, espero que gostem!
+                        </p>
+                        <a class="btn btn-secondary botao-do-inicio" href="#" role="button">Meu currículo</a>
+                    </div>
+                    
+                </div>
+            </div>
+
+        </section>
+
 
 
     </body>
