atualizando section de inicio

--- a/index.html
+++ b/index.html
@@ -37,21 +37,20 @@
         </nav>
 
         <section class="inicio container-fluid">
-            <h1 class="text-center">Seja bem-vindx!</h1>
             
 
-            <div class="container foto-com-texto">
+            <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 foto">
+                    <div class="col-6 mx-auto col-md-4 order-md-2">
                         <img src="img/essa.png" width="300px" class="rounded-circle">
                     </div>
-                    <div class="col-lg-6">
-                        <p class="minha-descricao">Meu nome é Eliene Montenegro, faço Ciências da Computação na UFBA (Universidade Federal da Bahia), sou Escritora (livro Depois do Fim do Mundo
+                    <div class="col-md-8 order-md-1 text-center text-md-left pr-md-5">
+                        <h1 class="texto-inicio text-center">Seja bem-vindx!</h1> 
+                        <p class="minha-descricao mb-4">Meu nome é Eliene Montenegro, faço Ciências da Computação na UFBA (Universidade Federal da Bahia), sou Escritora (livro Depois do Fim do Mundo
                             na Amazon), e pretendo me tornar Game e Web developer. Criei este portfolio para mostrar meus projetos, espero que gostem!
                         </p>
-                        <a class="btn btn-secondary botao-do-inicio" href="#" role="button">Meu currículo</a>
+                        <a class="btn btn-secondary minha-descricao botao-do-inicio" href="#" role="button">Meu currículo</a>
                     </div>
-                    
                 </div>
             </div>
 
