iniciando section de jogos

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Início <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#inicio">Início <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Jogos </a>
+                        <a class="nav-link" href="#jogos">Jogos </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Livros </a>
@@ -45,18 +45,57 @@
                         <img src="img/essa.png" width="300px" class="rounded-circle">
                     </div>
                     <div class="col-md-8 order-md-1 text-center text-md-left pr-md-5">
-                        <h1 class="texto-inicio text-center">Seja bem-vindx!</h1> 
-                        <p class="minha-descricao mb-4">Meu nome é Eliene Montenegro, faço Ciências da Computação na UFBA (Universidade Federal da Bahia), sou Escritora (livro Depois do Fim do Mundo
+                        <h1 class="texto-titulo text-center">Seja bem-vindx!</h1> 
+                        <p class="paragrafo mb-4">Meu nome é Eliene Montenegro, faço Ciências da Computação na UFBA (Universidade Federal da Bahia), sou Escritora (livro Depois do Fim do Mundo
                             na Amazon), e pretendo me tornar Game e Web developer. Criei este portfolio para mostrar meus projetos, espero que gostem!
                         </p>
-                        <a class="btn btn-secondary minha-descricao botao-do-inicio" href="#" role="button">Meu currículo</a>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="#" role="button">Currículo</a>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="#" role="button">Github</a>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="#" role="button">Instagram</a>
                     </div>
                 </div>
             </div>
 
         </section>
 
+        <section class="jogos container-fluid">
+            <h1 class="text-center texto-titulo">Jogos</h1>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 mx-auto col-md-4 order-md-1">
+                        <img src="img/formigs_logo.png" width="300px" class="rounded-circle logos">
+                    </div>
+                    <div class="col-md-8 order-md-2 text-center text-md-left pr-md-5">
+                        <h2 class="texto-titulo text-center">Formigz!</h2> 
+                        <p class="paragrafo mb-4">Esse jogo é sobre uma colônia de formaigas que é atacada por um humano. E agora, forçadas a deixar sua casa,
+                            você e os seus amigos precisam escapar. Mas escapar sozinho é impossível, então procure seus amigos dentro do formigueiro, e com a 
+                            ajuda deles, encontre a saída e escape do formigueiro antes que ele seja destruído por completo.
+                        </p>
+                        <p class="paragrafo">
+                            Trabalhei no áudio e game design deste jogo.
+                        </p>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2019/games/formigueiro" target="_blank" role="button">Download</a>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </section>
+
+
+        <footer>
+            <p class="text-center">
+                Desenvolvido por Eliene Montenegro
+            </p>
+        </footer>
 
     </body>
 </html>
+
+<!--This game is about a colony of ants that get attacked by a human outsider. And now, forced to leave home, you and the others need to escape! 
+    But since leaving alone is impossible, with that many obstacles in the way, gather all your friends and, with everyones help, find an exit and escape the anthill!
+
+I worked with game design and Audio in this game.-->
