pagina de jogos atualizada

--- a/index.html
+++ b/index.html
@@ -80,6 +80,25 @@
                 </div>
             </div>
 
+            <div class="container segundo-container">
+                <div class="row">
+                    <div class="col-6 mx-auto col-md-4 order-md-1">
+                        <img src="img/P.E.B.Alogo.png" width="300px" class="rounded-circle logos">
+                    </div>
+                    <div class="col-md-8 order-md-2 text-center text-md-left pr-md-5">
+                        <h2 class="texto-titulo text-center">P.E.B.A SpaceShip!</h2> 
+                        <p class="paragrafo mb-4">P.E.B.A. ESPAÇONAVE (Pesquisa Espacial Baiana e Além) é um jogo cooperativo para 2 jogadores onde cada decisão deve ser bem planejada. 
+                            Cada sala permite criar um item, utilize-o com sabedoria e trabalhe em equipe para reparar a nave! Fique alerta! 
+                            INSTRUÇÕES: Use as teclas de cursor ou WASD para se mover. Cada sala tem uma mesa de trabalho. Cada mesa de trabalho produz um item específico. Colete esse item e entregue a mesa de trabalho que necessita dele.
+                        </p>
+                        <p class="paragrafo">
+                            Trabalhei no áudio, game design e programação deste jogo.
+                        </p>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2020/games/peba-spaceship-3" target="_blank" role="button">Download</a>
+                    </div>
+                </div>
+            </div>
+
 
 
 
