section de livros pronta

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                         <a class="nav-link" href="#jogos">Jogos </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Livros </a>
+                        <a class="nav-link" href="#livros">Livros </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contato</a>
+                        <a class="nav-link" href="#contato">Contato</a>
                     </li>
               </ul>
             </div>
         </nav>
 
-        <section class="inicio container-fluid">
+        <section id="inicio" class="inicio container-fluid">
             
 
             <div class="container">
@@ -58,13 +58,13 @@
 
         </section>
 
-        <section class="jogos container-fluid">
+        <section id="jogos" class="jogos container-fluid">
             <h1 class="text-center texto-titulo">Jogos</h1>
 
             <div class="container">
                 <div class="row">
                     <div class="col-6 mx-auto col-md-4 order-md-1">
-                        <img src="img/formigs_logo.png" width="300px" class="rounded-circle logos">
+                        <img src="img/formigs_logo.png" width="300px" class="logos">
                     </div>
                     <div class="col-md-8 order-md-2 text-center text-md-left pr-md-5">
                         <h2 class="texto-titulo text-center">Formigz!</h2> 
@@ -75,7 +75,7 @@
                         <p class="paragrafo">
                             Trabalhei no áudio e game design deste jogo.
                         </p>
-                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2019/games/formigueiro" target="_blank" role="button">Download</a>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2019/games/formigueiro" target="_blank" role="button">Download gratuito</a>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
             <div class="container segundo-container">
                 <div class="row">
                     <div class="col-6 mx-auto col-md-4 order-md-1">
-                        <img src="img/P.E.B.Alogo.png" width="300px" class="rounded-circle logos">
+                        <img src="img/P.E.B.Alogo.png" width="300px" class="logos">
                     </div>
                     <div class="col-md-8 order-md-2 text-center text-md-left pr-md-5">
                         <h2 class="texto-titulo text-center">P.E.B.A SpaceShip!</h2> 
@@ -94,20 +94,46 @@
                         <p class="paragrafo">
                             Trabalhei no áudio, game design e programação deste jogo.
                         </p>
-                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2020/games/peba-spaceship-3" target="_blank" role="button">Download</a>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2020/games/peba-spaceship-3" target="_blank" role="button">Download gratuito</a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+        <section id="livros" class="livros">
+            <h1 class="text-center texto-titulo">Livros</h1>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 mx-auto col-md-4 order-md-2">
+                        <img src="img/livro.jpg" width="300px">
+                    </div>
+                    <div class="col-md-8 order-md-1 text-center text-md-left pr-md-5">
+                        <h2 class="texto-titulo text-center">Depois do Fim do Mundo</h2> 
+                        <p class="paragrafo mb-4">E se você tivesse que passar a vida inteira escondido dentro de uma montanha?
+                            E se fosse considerado criminoso pelo simples fato de que você veio ao mundo?
+                            
+                            Isso mesmo. Por causa da regra do filho único, Lexi e outros seis jovens tiveram
+                            que ser escondidos em uma montanha para que não sofressem a pena de morte.
+                            Mas quando tudo começa a desmoronar, e eles estão prestes a ser descobertos,
+                            os sete jovens têm que fugir.
+                            Será que eles irão sobreviver em um mundo que é desconhecido pra eles?
+                        </p>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2019/games/formigueiro" target="_blank" role="button">Download</a>
                     </div>
                 </div>
             </div>
 
 
-
-
         </section>
+
 
 
         <footer>
             <p class="text-center">
-                Desenvolvido por Eliene Montenegro
+                Desenvolvido por Lila Montenegro
             </p>
         </footer>
 
