--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
                 </div>
             </div>
 
+            <p class="float-right voltarzinho">
+                <a class="btn btn-secondary" href="#">Voltar para o ínicio</a>
+            </p>
+
         </section>
 
 
@@ -164,6 +168,7 @@
             <p class="text-center">
                 Desenvolvido por Lila Montenegro
             </p>
+            
         </footer>
 
     </body>
