--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                        
                         <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://github.com/ElieneMontenegro" target="_blank" role="button">Github</a>
                         <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://www.instagram.com/lilamontenegro/" target="_blank" role="button">Instagram</a>
-                        
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://www.wattpad.com/user/LilaMontenegro" target="_blank" role="button">Wattpad</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                             os sete jovens têm que fugir.
                             Será que eles irão sobreviver em um mundo que é desconhecido pra eles?
                         </p>
-                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://globalgamejam.org/2019/games/formigueiro" target="_blank" role="button">Download</a>
+                        <a class="btn btn-secondary paragrafo botao-do-inicio" href="https://www.wattpad.com/407086675-depois-do-fim-do-mundo-cap%C3%ADtulo-um" target="_blank" role="button">Ler!</a>
                     </div>
                 </div>
             </div>
